--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "use-latest-callback": "^0.1.9"
+    "use-latest-callback": "^0.1.9",
+    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
