--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-x-carousel": "^1.0.1",
     "use-latest-callback": "^0.1.9"
   },
   "devDependencies": {
